// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwitchField should render correctly 1`] = `
<DocumentFragment>
  .cache-axw7ok {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-1c3gp4t-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.cache-1c3gp4t-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.3;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 34px;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 4px;
  height: 24px;
  background-color: #d4dae7;
  min-width: 48px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch:focus-within,
.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch:focus {
  box-shadow: 0 0 1px 2px #fff,0 0 1px 3px #d4dae7;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch .e1x48wse4 {
  position: absolute;
  margin-left: 4px;
  margin-right: 4px;
  left: 0;
  right: 24px;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  top: 4px;
  bottom: 0;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch .e1x48wse5 {
  display: block;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  background-color: #fff;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[aria-checked='true']>.e1x48wse4 {
  -webkit-transform: translateX(100%);
  -moz-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch:not([aria-checked='true'])>.e1x48wse3 {
  margin-left: 32px;
  margin-right: 8px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[aria-checked='true'] .e1x48wse3 {
  margin-right: 32px;
  margin-left: 8px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small'] {
  padding: 4px;
  height: 16px;
  min-width: 32px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small'] .e1x48wse4 {
  right: 16px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small'] .e1x48wse5 {
  width: 16px;
  height: 16px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small']:not([aria-checked='true'])>.e1x48wse3 {
  margin-left: calc(
          16px + 4px
        );
  margin-right: 4px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small'][aria-checked='true'] .e1x48wse3 {
  margin-right: calc(
          16px + 4px
        );
  margin-left: 4px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true'] {
  background-color: #45d6b5;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='primary'][aria-checked='true'] {
  color: #fff;
  background-color: #4f0599;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='primary'][aria-checked='true']>.e1x48wse3 {
  color: #fff;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='primary'][aria-checked='true']:focus-within,
.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='primary'][aria-checked='true']:focus {
  box-shadow: 0 0 1px 2px #fff,0 0 1px 3px #4f0599;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'] {
  color: #4a4f62;
  background-color: #d4dae7;
  font-weight: bold;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'] .e1x48wse5 {
  background-color: #4a4f62;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true'] {
  color: #45d6b5;
  background-color: #cdfcf1;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true'] .e1x48wse5 {
  background-color: #45d6b5;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true']>.e1x48wse3 {
  color: #fff;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true']:focus-within,
.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true']:focus {
  box-shadow: 0 0 1px 2px #fff,0 0 1px 3px #45d6b5;
}

.cache-322r38-StyledCheckbox {
  position: absolute;
  opacity: 0.01;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-322r38-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<form
    novalidate=""
  >
    <div
      class="cache-axw7ok e1fcp5360"
    >
      <label
        aria-checked="false"
        aria-disabled="false"
        class="cache-1c3gp4t-StyledLabel e1x48wse0"
      >
        <div
          aria-checked="false"
          class="cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch e1x48wse2"
          data-size="small"
          data-variant="primary"
        >
          <div
            class="cache-24p4j6-SwitchBallContainer e1x48wse4"
          >
            <span
              class="cache-hol3kh-SwitchBall e1x48wse5"
            />
          </div>
          <input
            class="cache-322r38-StyledCheckbox e1x48wse1"
            id="test"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SwitchField should render correctly checked 1`] = `
<DocumentFragment>
  .cache-axw7ok {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-1c3gp4t-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.cache-1c3gp4t-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.3;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 34px;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 4px;
  height: 24px;
  background-color: #d4dae7;
  min-width: 48px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch:focus-within,
.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch:focus {
  box-shadow: 0 0 1px 2px #fff,0 0 1px 3px #d4dae7;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch .e1x48wse4 {
  position: absolute;
  margin-left: 4px;
  margin-right: 4px;
  left: 0;
  right: 24px;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  top: 4px;
  bottom: 0;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch .e1x48wse5 {
  display: block;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  background-color: #fff;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[aria-checked='true']>.e1x48wse4 {
  -webkit-transform: translateX(100%);
  -moz-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch:not([aria-checked='true'])>.e1x48wse3 {
  margin-left: 32px;
  margin-right: 8px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[aria-checked='true'] .e1x48wse3 {
  margin-right: 32px;
  margin-left: 8px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small'] {
  padding: 4px;
  height: 16px;
  min-width: 32px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small'] .e1x48wse4 {
  right: 16px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small'] .e1x48wse5 {
  width: 16px;
  height: 16px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small']:not([aria-checked='true'])>.e1x48wse3 {
  margin-left: calc(
          16px + 4px
        );
  margin-right: 4px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small'][aria-checked='true'] .e1x48wse3 {
  margin-right: calc(
          16px + 4px
        );
  margin-left: 4px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true'] {
  background-color: #45d6b5;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='primary'][aria-checked='true'] {
  color: #fff;
  background-color: #4f0599;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='primary'][aria-checked='true']>.e1x48wse3 {
  color: #fff;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='primary'][aria-checked='true']:focus-within,
.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='primary'][aria-checked='true']:focus {
  box-shadow: 0 0 1px 2px #fff,0 0 1px 3px #4f0599;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'] {
  color: #4a4f62;
  background-color: #d4dae7;
  font-weight: bold;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'] .e1x48wse5 {
  background-color: #4a4f62;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true'] {
  color: #45d6b5;
  background-color: #cdfcf1;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true'] .e1x48wse5 {
  background-color: #45d6b5;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true']>.e1x48wse3 {
  color: #fff;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true']:focus-within,
.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true']:focus {
  box-shadow: 0 0 1px 2px #fff,0 0 1px 3px #45d6b5;
}

.cache-322r38-StyledCheckbox {
  position: absolute;
  opacity: 0.01;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-322r38-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<form
    novalidate=""
  >
    <div
      class="cache-axw7ok e1fcp5360"
    >
      <label
        aria-checked="true"
        aria-disabled="false"
        class="cache-1c3gp4t-StyledLabel e1x48wse0"
      >
        <div
          aria-checked="true"
          class="cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch e1x48wse2"
          data-size="small"
          data-variant="primary"
        >
          <div
            class="cache-24p4j6-SwitchBallContainer e1x48wse4"
          >
            <span
              class="cache-hol3kh-SwitchBall e1x48wse5"
            />
          </div>
          <input
            checked=""
            class="cache-322r38-StyledCheckbox e1x48wse1"
            id="test"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SwitchField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-axw7ok {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-1c3gp4t-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.cache-1c3gp4t-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.3;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 34px;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 4px;
  height: 24px;
  background-color: #d4dae7;
  min-width: 48px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch:focus-within,
.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch:focus {
  box-shadow: 0 0 1px 2px #fff,0 0 1px 3px #d4dae7;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch .e1x48wse4 {
  position: absolute;
  margin-left: 4px;
  margin-right: 4px;
  left: 0;
  right: 24px;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  top: 4px;
  bottom: 0;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch .e1x48wse5 {
  display: block;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  background-color: #fff;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[aria-checked='true']>.e1x48wse4 {
  -webkit-transform: translateX(100%);
  -moz-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch:not([aria-checked='true'])>.e1x48wse3 {
  margin-left: 32px;
  margin-right: 8px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[aria-checked='true'] .e1x48wse3 {
  margin-right: 32px;
  margin-left: 8px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small'] {
  padding: 4px;
  height: 16px;
  min-width: 32px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small'] .e1x48wse4 {
  right: 16px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small'] .e1x48wse5 {
  width: 16px;
  height: 16px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small']:not([aria-checked='true'])>.e1x48wse3 {
  margin-left: calc(
          16px + 4px
        );
  margin-right: 4px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small'][aria-checked='true'] .e1x48wse3 {
  margin-right: calc(
          16px + 4px
        );
  margin-left: 4px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true'] {
  background-color: #45d6b5;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='primary'][aria-checked='true'] {
  color: #fff;
  background-color: #4f0599;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='primary'][aria-checked='true']>.e1x48wse3 {
  color: #fff;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='primary'][aria-checked='true']:focus-within,
.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='primary'][aria-checked='true']:focus {
  box-shadow: 0 0 1px 2px #fff,0 0 1px 3px #4f0599;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'] {
  color: #4a4f62;
  background-color: #d4dae7;
  font-weight: bold;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'] .e1x48wse5 {
  background-color: #4a4f62;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true'] {
  color: #45d6b5;
  background-color: #cdfcf1;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true'] .e1x48wse5 {
  background-color: #45d6b5;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true']>.e1x48wse3 {
  color: #fff;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true']:focus-within,
.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true']:focus {
  box-shadow: 0 0 1px 2px #fff,0 0 1px 3px #45d6b5;
}

.cache-322r38-StyledCheckbox {
  position: absolute;
  opacity: 0.01;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-322r38-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<form
    novalidate=""
  >
    <div
      class="cache-axw7ok e1fcp5360"
    >
      <label
        aria-checked="false"
        aria-disabled="true"
        class="cache-1c3gp4t-StyledLabel e1x48wse0"
      >
        <div
          aria-checked="false"
          class="cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch e1x48wse2"
          data-size="small"
          data-variant="primary"
        >
          <div
            class="cache-24p4j6-SwitchBallContainer e1x48wse4"
          >
            <span
              class="cache-hol3kh-SwitchBall e1x48wse5"
            />
          </div>
          <input
            class="cache-322r38-StyledCheckbox e1x48wse1"
            disabled=""
            id="test"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SwitchField should render correctly with label and checked 1`] = `
<DocumentFragment>
  .cache-axw7ok {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-1c3gp4t-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.cache-1c3gp4t-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.3;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 34px;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 4px;
  height: 24px;
  background-color: #d4dae7;
  min-width: 48px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch:focus-within,
.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch:focus {
  box-shadow: 0 0 1px 2px #fff,0 0 1px 3px #d4dae7;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch .e1x48wse4 {
  position: absolute;
  margin-left: 4px;
  margin-right: 4px;
  left: 0;
  right: 24px;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  top: 4px;
  bottom: 0;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch .e1x48wse5 {
  display: block;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  background-color: #fff;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[aria-checked='true']>.e1x48wse4 {
  -webkit-transform: translateX(100%);
  -moz-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch:not([aria-checked='true'])>.e1x48wse3 {
  margin-left: 32px;
  margin-right: 8px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[aria-checked='true'] .e1x48wse3 {
  margin-right: 32px;
  margin-left: 8px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small'] {
  padding: 4px;
  height: 16px;
  min-width: 32px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small'] .e1x48wse4 {
  right: 16px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small'] .e1x48wse5 {
  width: 16px;
  height: 16px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small']:not([aria-checked='true'])>.e1x48wse3 {
  margin-left: calc(
          16px + 4px
        );
  margin-right: 4px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small'][aria-checked='true'] .e1x48wse3 {
  margin-right: calc(
          16px + 4px
        );
  margin-left: 4px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true'] {
  background-color: #45d6b5;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='primary'][aria-checked='true'] {
  color: #fff;
  background-color: #4f0599;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='primary'][aria-checked='true']>.e1x48wse3 {
  color: #fff;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='primary'][aria-checked='true']:focus-within,
.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='primary'][aria-checked='true']:focus {
  box-shadow: 0 0 1px 2px #fff,0 0 1px 3px #4f0599;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'] {
  color: #4a4f62;
  background-color: #d4dae7;
  font-weight: bold;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'] .e1x48wse5 {
  background-color: #4a4f62;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true'] {
  color: #45d6b5;
  background-color: #cdfcf1;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true'] .e1x48wse5 {
  background-color: #45d6b5;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true']>.e1x48wse3 {
  color: #fff;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true']:focus-within,
.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true']:focus {
  box-shadow: 0 0 1px 2px #fff,0 0 1px 3px #45d6b5;
}

.cache-322r38-StyledCheckbox {
  position: absolute;
  opacity: 0.01;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-322r38-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

.cache-1y8ssf7-StyledText-variantStyles-colorStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4f0599;
}

<form
    novalidate=""
  >
    <div
      class="cache-axw7ok e1fcp5360"
    >
      <label
        aria-checked="true"
        aria-disabled="false"
        class="cache-1c3gp4t-StyledLabel e1x48wse0"
      >
        <div
          aria-checked="true"
          class="cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch e1x48wse2"
          data-size="small"
          data-variant="primary"
        >
          <div
            class="cache-24p4j6-SwitchBallContainer e1x48wse4"
          >
            <span
              class="cache-hol3kh-SwitchBall e1x48wse5"
            />
          </div>
          <input
            checked=""
            class="cache-322r38-StyledCheckbox e1x48wse1"
            id="test"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
      <div
        class="e1g1zfwd0 cache-1y8ssf7-StyledText-variantStyles-colorStyles"
      >
        test
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SwitchField should render correctly with offLabel 1`] = `
<DocumentFragment>
  .cache-axw7ok {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-1c3gp4t-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.cache-1c3gp4t-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.3;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 34px;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 4px;
  height: 24px;
  background-color: #d4dae7;
  min-width: 48px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch:focus-within,
.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch:focus {
  box-shadow: 0 0 1px 2px #fff,0 0 1px 3px #d4dae7;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch .e1x48wse4 {
  position: absolute;
  margin-left: 4px;
  margin-right: 4px;
  left: 0;
  right: 24px;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  top: 4px;
  bottom: 0;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch .e1x48wse5 {
  display: block;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  background-color: #fff;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[aria-checked='true']>.e1x48wse4 {
  -webkit-transform: translateX(100%);
  -moz-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch:not([aria-checked='true'])>.e1x48wse3 {
  margin-left: 32px;
  margin-right: 8px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[aria-checked='true'] .e1x48wse3 {
  margin-right: 32px;
  margin-left: 8px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small'] {
  padding: 4px;
  height: 16px;
  min-width: 32px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small'] .e1x48wse4 {
  right: 16px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small'] .e1x48wse5 {
  width: 16px;
  height: 16px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small']:not([aria-checked='true'])>.e1x48wse3 {
  margin-left: calc(
          16px + 4px
        );
  margin-right: 4px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small'][aria-checked='true'] .e1x48wse3 {
  margin-right: calc(
          16px + 4px
        );
  margin-left: 4px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true'] {
  background-color: #45d6b5;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='primary'][aria-checked='true'] {
  color: #fff;
  background-color: #4f0599;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='primary'][aria-checked='true']>.e1x48wse3 {
  color: #fff;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='primary'][aria-checked='true']:focus-within,
.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='primary'][aria-checked='true']:focus {
  box-shadow: 0 0 1px 2px #fff,0 0 1px 3px #4f0599;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'] {
  color: #4a4f62;
  background-color: #d4dae7;
  font-weight: bold;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'] .e1x48wse5 {
  background-color: #4a4f62;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true'] {
  color: #45d6b5;
  background-color: #cdfcf1;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true'] .e1x48wse5 {
  background-color: #45d6b5;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true']>.e1x48wse3 {
  color: #fff;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true']:focus-within,
.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true']:focus {
  box-shadow: 0 0 1px 2px #fff,0 0 1px 3px #45d6b5;
}

.cache-322r38-StyledCheckbox {
  position: absolute;
  opacity: 0.01;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-322r38-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<form
    novalidate=""
  >
    <div
      class="cache-axw7ok e1fcp5360"
    >
      <label
        aria-checked="false"
        aria-disabled="false"
        class="cache-1c3gp4t-StyledLabel e1x48wse0"
      >
        <div
          aria-checked="false"
          class="cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch e1x48wse2"
          data-size="small"
          data-variant="primary"
        >
          <div
            class="cache-24p4j6-SwitchBallContainer e1x48wse4"
          >
            <span
              class="cache-hol3kh-SwitchBall e1x48wse5"
            />
          </div>
          <input
            class="cache-322r38-StyledCheckbox e1x48wse1"
            id="test"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SwitchField should render correctly with onLabel 1`] = `
<DocumentFragment>
  .cache-axw7ok {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-1c3gp4t-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.cache-1c3gp4t-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.3;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 34px;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 4px;
  height: 24px;
  background-color: #d4dae7;
  min-width: 48px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch:focus-within,
.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch:focus {
  box-shadow: 0 0 1px 2px #fff,0 0 1px 3px #d4dae7;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch .e1x48wse4 {
  position: absolute;
  margin-left: 4px;
  margin-right: 4px;
  left: 0;
  right: 24px;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  top: 4px;
  bottom: 0;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch .e1x48wse5 {
  display: block;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  background-color: #fff;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[aria-checked='true']>.e1x48wse4 {
  -webkit-transform: translateX(100%);
  -moz-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch:not([aria-checked='true'])>.e1x48wse3 {
  margin-left: 32px;
  margin-right: 8px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[aria-checked='true'] .e1x48wse3 {
  margin-right: 32px;
  margin-left: 8px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small'] {
  padding: 4px;
  height: 16px;
  min-width: 32px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small'] .e1x48wse4 {
  right: 16px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small'] .e1x48wse5 {
  width: 16px;
  height: 16px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small']:not([aria-checked='true'])>.e1x48wse3 {
  margin-left: calc(
          16px + 4px
        );
  margin-right: 4px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small'][aria-checked='true'] .e1x48wse3 {
  margin-right: calc(
          16px + 4px
        );
  margin-left: 4px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true'] {
  background-color: #45d6b5;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='primary'][aria-checked='true'] {
  color: #fff;
  background-color: #4f0599;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='primary'][aria-checked='true']>.e1x48wse3 {
  color: #fff;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='primary'][aria-checked='true']:focus-within,
.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='primary'][aria-checked='true']:focus {
  box-shadow: 0 0 1px 2px #fff,0 0 1px 3px #4f0599;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'] {
  color: #4a4f62;
  background-color: #d4dae7;
  font-weight: bold;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'] .e1x48wse5 {
  background-color: #4a4f62;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true'] {
  color: #45d6b5;
  background-color: #cdfcf1;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true'] .e1x48wse5 {
  background-color: #45d6b5;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true']>.e1x48wse3 {
  color: #fff;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true']:focus-within,
.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true']:focus {
  box-shadow: 0 0 1px 2px #fff,0 0 1px 3px #45d6b5;
}

.cache-322r38-StyledCheckbox {
  position: absolute;
  opacity: 0.01;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-322r38-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<form
    novalidate=""
  >
    <div
      class="cache-axw7ok e1fcp5360"
    >
      <label
        aria-checked="false"
        aria-disabled="false"
        class="cache-1c3gp4t-StyledLabel e1x48wse0"
      >
        <div
          aria-checked="false"
          class="cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch e1x48wse2"
          data-size="small"
          data-variant="primary"
        >
          <div
            class="cache-24p4j6-SwitchBallContainer e1x48wse4"
          >
            <span
              class="cache-hol3kh-SwitchBall e1x48wse5"
            />
          </div>
          <input
            class="cache-322r38-StyledCheckbox e1x48wse1"
            id="test"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SwitchField should render correctly without onLabel and offLabel but has label 1`] = `
<DocumentFragment>
  .cache-axw7ok {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-1c3gp4t-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.cache-1c3gp4t-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.3;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 34px;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 4px;
  height: 24px;
  background-color: #d4dae7;
  min-width: 48px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch:focus-within,
.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch:focus {
  box-shadow: 0 0 1px 2px #fff,0 0 1px 3px #d4dae7;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch .e1x48wse4 {
  position: absolute;
  margin-left: 4px;
  margin-right: 4px;
  left: 0;
  right: 24px;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  top: 4px;
  bottom: 0;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch .e1x48wse5 {
  display: block;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  background-color: #fff;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[aria-checked='true']>.e1x48wse4 {
  -webkit-transform: translateX(100%);
  -moz-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch:not([aria-checked='true'])>.e1x48wse3 {
  margin-left: 32px;
  margin-right: 8px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[aria-checked='true'] .e1x48wse3 {
  margin-right: 32px;
  margin-left: 8px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small'] {
  padding: 4px;
  height: 16px;
  min-width: 32px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small'] .e1x48wse4 {
  right: 16px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small'] .e1x48wse5 {
  width: 16px;
  height: 16px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small']:not([aria-checked='true'])>.e1x48wse3 {
  margin-left: calc(
          16px + 4px
        );
  margin-right: 4px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-size='small'][aria-checked='true'] .e1x48wse3 {
  margin-right: calc(
          16px + 4px
        );
  margin-left: 4px;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true'] {
  background-color: #45d6b5;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='primary'][aria-checked='true'] {
  color: #fff;
  background-color: #4f0599;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='primary'][aria-checked='true']>.e1x48wse3 {
  color: #fff;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='primary'][aria-checked='true']:focus-within,
.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='primary'][aria-checked='true']:focus {
  box-shadow: 0 0 1px 2px #fff,0 0 1px 3px #4f0599;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'] {
  color: #4a4f62;
  background-color: #d4dae7;
  font-weight: bold;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'] .e1x48wse5 {
  background-color: #4a4f62;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true'] {
  color: #45d6b5;
  background-color: #cdfcf1;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true'] .e1x48wse5 {
  background-color: #45d6b5;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true']>.e1x48wse3 {
  color: #fff;
}

.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true']:focus-within,
.cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch[data-variant='success'][aria-checked='true']:focus {
  box-shadow: 0 0 1px 2px #fff,0 0 1px 3px #45d6b5;
}

.cache-322r38-StyledCheckbox {
  position: absolute;
  opacity: 0.01;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-322r38-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

.cache-1mct6ue-StyledText-variantStyles-colorStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
}

<form
    novalidate=""
  >
    <div
      class="cache-axw7ok e1fcp5360"
    >
      <label
        aria-checked="false"
        aria-disabled="false"
        class="cache-1c3gp4t-StyledLabel e1x48wse0"
      >
        <div
          aria-checked="false"
          class="cache-73g22c-StyledSwitch-SwitchVariantsStyles-StyledSwitch-SwitchVariantsStyles-StyledSwitch e1x48wse2"
          data-size="small"
          data-variant="primary"
        >
          <div
            class="cache-24p4j6-SwitchBallContainer e1x48wse4"
          >
            <span
              class="cache-hol3kh-SwitchBall e1x48wse5"
            />
          </div>
          <input
            class="cache-322r38-StyledCheckbox e1x48wse1"
            id="test"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
      <div
        class="e1g1zfwd0 cache-1mct6ue-StyledText-variantStyles-colorStyles"
      >
        test
      </div>
    </div>
  </form>
</DocumentFragment>
`;
